fixed card view progress bar and aligned date

--- a/src/app/shared/component/card-view/card-view.component.scss
+++ b/src/app/shared/component/card-view/card-view.component.scss
@@ -55,12 +55,14 @@ $extra-light: 300;
     text-align: center;
 
     .progress-bar {
-      height: 1.2rem;
+      height: 2rem;
       position: relative;
       top: 0px;
       display: flex;
+      flex-direction: row;
       justify-content: space-between;
       overflow: hidden;
+      background-color: transparent;
       ul {
         padding-left: 0;
         list-style-type: none;
@@ -83,7 +85,7 @@ $extra-light: 300;
         background-color: darken($card-bg-color, 20%);
         width: 100%;
         position: absolute;
-        top: 45%;
+        top: 38%;
       }
       .progress-step-completed::after {
         background-color: darken($card-bg-color, 60%);
@@ -92,8 +94,8 @@ $extra-light: 300;
         display: none;
       }
       .circle {
-        width: 1.2rem;
-        height: 100%;
+        width: 1rem;
+        height: 1rem;
         background-color: darken($card-bg-color, 20%);
         border-radius: 100%;
       }
@@ -150,7 +152,6 @@ $extra-light: 300;
       align-items: center;
 
       .day-container {
-        width: 100px;
         border-radius: 1rem;
         span {
           background-color: darken($card-bg-color, 20%);
